--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/markdown-it": "^12.2.3",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.20",
+    "sharp": "^0.31.3",
     "tailwindcss": "^3.2.4"
   }
 }
